bug fixed on collapse advanced filter

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -736,7 +736,7 @@ a#search {
 
 .morph-search-faq {
   position: absolute;
-  background: #f1f1f1;
+  background: #ffffff;
   overflow: hidden;
   width: -webkit-calc(100% - 60px);
   height: 0px;
@@ -837,6 +837,20 @@ a#search {
 .morph-search-faq #m-search.m-active, .morph-search-faq #m-faq.m-active {
   display: inherit;
   visibility: visible;
+}
+
+.morphsearch-form {
+  margin-top: 230px;
+}
+
+.morphsearch-form #big-search-input {
+  width: 100%;
+  border: none;
+  border-bottom: 2px solid #535353;
+}
+
+.morphsearch-form #big-search-input:focus {
+  outline: none;
 }
 
 /* Style for handlers */
